# Assistnat

./: .env  Dockerfile  livekit.toml  pyproject.toml
src/: agent.py  vision_service.py
src/memory/: short_term.py  summarizer.py
src/modes/: __init__.py  registry.py
src/modes/configs/: general.json  programmer.json  research.json  tutor.json
src/tools/: __init__.py  calculator.py  registry.py  search.py  weather.py
