[project]
name = "voice-agent"
version = "0.1.0"
description = "LiveKit Voice Agent"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.0",
    "livekit-plugins-nvidia>=1.6.5",
    "livekit-plugins-openai>=1.0",
    "livekit-plugins-silero>=1.6.5",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
